--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,8 @@ owner: Roco-Team # Your GitHub organization or username, where this repository l
 repo: stats # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
+  - name: Profile Page (roco.work)
+    url: https://roco.work
   - name: Wikipedia
     url: https://en.wikipedia.org
   - name: Hacker News
