--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,15 +17,15 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.rocoawa.com
   # baseUrl: /your-repo-name
-  logoUrl: https://img.roco.work/s.png
+  logoUrl: https://announce.rocoawa.com/rt.png
   name: Status / Roco - Team
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: Contact
+      href: mailto:co@rocoawa.com
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
