--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,12 +5,8 @@ repo: stats # The name of this repository
 sites:
   - name: Profile Page (roco.work)
     url: https://roco.work
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Roco - Team (rocoawa.com)
+    url: https://rocoawa.com
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
