--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,10 +13,10 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.rocoawa.com
   # baseUrl: /your-repo-name
-  logoUrl: https://announce.rocoawa.com/rt.png
+  logoUrl: https://roco.work/img/logo.png
   name: Status / Roco - Team
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "This is a status page from**Roco - Team**."
+  introMessage: 
   navbar:
     - title: Status
       href: /
