--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,8 +5,27 @@ repo: stats # The name of this repository
 sites:
   - name: Profile Page (roco.work)
     url: https://roco.work/
+
   - name: Roco - Team (rocoawa.com)
     url: https://rocoawa.com
+    
+  - name: Archives (archived.roco.work) 
+    url: https://archived.roco.work
+    
+  - name: Blog (blog.roco.work)
+    url: https://blog.roco.work
+    
+  - name: Images (img.roco.work) 
+    url: https://img.roco.work
+    
+  - name: URL Redirection by cutt.ly (roco.ga) 
+    url: https://roco.ga
+    
+  - name: URL Redirection (roco2.tk) 
+    url: https://roco2.tk
+    
+  - name: Team announcements (announce.rocoawa.com) 
+    url: https://announce.rocoawa.com
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
