--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -39,6 +39,8 @@ status-website:
   navbar:
     - title: Status
       href: /
+    - title: Main-site
+      href: https://status.roco.work
     - title: Contact
       href: mailto:co@rocoawa.com
 
