--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,7 +7,7 @@ sites:
     url: https://roco.work/r.png
 
   - name: Roco - Team (rocoawa.com)
-    url: https://rocoawa.com/
+    url: https://www.rocoawa.com/
     
   - name: Archives (archived.roco.work) 
     url: https://archived.roco.work/
